Fix window font size (was too big)

--- a/data/css/gtk-style.css
+++ b/data/css/gtk-style.css
@@ -9,6 +9,8 @@
 
 window {
     border-color: transparent;
+    font-family: 'Open Sans';
+    font-size: 12px;
 }
 
 #logo {
